# hevc.js

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  LEARNINGS.md  LICENSE  MASTER-PLAN.md  MEMENTO-DEV.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  pages.yml  test.yml
demo/: bbb1080_singleslice.265  dash-bundle.js  dash-entry.ts  dash.html  demo.css  hevc-decode.wasm  hls-bundle.js  hls-entry.ts  hls.html  index.html  serve.sh  test-diag.html  test-hls.html  test-pipeline.html  test-videojs.html  transcode-worker.js  videojs-bundle.js  videojs-entry.ts  videojs.html
demo/streams/bbb1080/: playlist.m3u8  seg_000.m4s  seg_001.m4s  seg_002.m4s  seg_003.m4s  seg_004.m4s  seg_005.m4s  seg_006.m4s  seg_007.m4s
demo/streams/bbb360/: playlist.m3u8  seg_000.m4s  seg_001.m4s  seg_002.m4s
demo/streams/bbb4k/: playlist.m3u8  seg_000.m4s  seg_001.m4s  seg_002.m4s  seg_003.m4s
demo/streams/bbb720/: playlist.m3u8  seg_000.m4s  seg_001.m4s  seg_002.m4s  seg_003.m4s  seg_004.m4s  seg_005.m4s  seg_006.m4s  seg_007.m4s  seg_008.m4s  seg_009.m4s
demo/streams/dash_1080p/: manifest.mpd  seg_001.m4s  seg_002.m4s  seg_003.m4s  seg_004.m4s  seg_005.m4s  seg_0_001.m4s  seg_0_002.m4s  seg_0_003.m4s  seg_0_004.m4s  seg_0_005.m4s  seg_1_003.m4s  seg_1_004.m4s  seg_1_006.m4s
demo/streams/dash_4k/: manifest.mpd  seg_001.m4s  seg_002.m4s  seg_003.m4s  seg_004.m4s  seg_005.m4s  seg_0_001.m4s  seg_0_002.m4s  seg_0_003.m4s  seg_0_004.m4s  seg_0_005.m4s  seg_1_001.m4s  seg_1_002.m4s  seg_1_005.m4s
demo/streams/dash_720p/: manifest.mpd  seg_001.m4s  seg_002.m4s  seg_003.m4s  seg_004.m4s  seg_005.m4s  seg_0_001.m4s  seg_0_002.m4s  seg_0_003.m4s  seg_0_004.m4s  seg_0_005.m4s  seg_1_001.m4s  seg_1_002.m4s  seg_1_003.m4s  seg_1_004.m4s  seg_1_005.m4s  seg_1_006.m4s
demo/streams/dash_abr/: bbb_1080p_dash1.m4s  bbb_1080p_dash10.m4s  bbb_1080p_dash11.m4s  bbb_1080p_dash12.m4s  bbb_1080p_dash13.m4s  bbb_1080p_dash14.m4s  bbb_1080p_dash15.m4s  bbb_1080p_dash2.m4s  bbb_1080p_dash3.m4s  bbb_1080p_dash4.m4s  bbb_1080p_dash5.m4s  bbb_1080p_dash6.m4s  bbb_1080p_dash7.m4s  bbb_1080p_dash8.m4s  bbb_1080p_dash9.m4s  bbb_480p_dash1.m4s  bbb_480p_dash10.m4s  bbb_480p_dash11.m4s  bbb_480p_dash12.m4s  bbb_480p_dash13.m4s  bbb_480p_dash14.m4s  bbb_480p_dash15.m4s  bbb_480p_dash2.m4s  bbb_480p_dash3.m4s  bbb_480p_dash4.m4s  bbb_480p_dash5.m4s  bbb_480p_dash6.m4s  bbb_480p_dash7.m4s  bbb_480p_dash8.m4s  bbb_480p_dash9.m4s  bbb_720p_dash1.m4s  bbb_720p_dash10.m4s  bbb_720p_dash11.m4s  bbb_720p_dash12.m4s  bbb_720p_dash13.m4s  bbb_720p_dash14.m4s  bbb_720p_dash15.m4s  bbb_720p_dash2.m4s  bbb_720p_dash3.m4s  bbb_720p_dash4.m4s  (+21 more)
demo/streams/hls_abr/: master.m3u8
docs/: STREAMING-PLAN.md  agent-guide.md  cross-reference.md
docs/adr/: 001-initial-arch.md
docs/oracle/: oracle-strategy.md
docs/phases/: phase-01-infra.md  phase-02-bitstream.md  phase-03-parsing.md  phase-04-intra.md  phase-04a-cabac.md  phase-04b-coding-tree.md  phase-04c-residual-contexts.md  phase-04d-coefficient-parsing.md  phase-04e-transform-dequant.md  phase-04f-prediction-recon.md  phase-05-0-fix-multictu.md  phase-05-1-dpb-poc.md  phase-05-10-integration-b.md  phase-05-2-rps-reflists.md  phase-05-3-merge-spatial.md  phase-05-4-tmvp.md  phase-05-5-merge-full.md  phase-05-6-amvp-mvd.md  phase-05-7-interp-luma.md  phase-05-8-interp-chroma-bipred.md  phase-05-9-integration-p.md  phase-05-inter.md  phase-06-loop-filters.md  phase-07-high-profiles.md  phase-08-wasm.md  phase-09-perf.md  phase-10-multi-slice.md
docs/plans/: streaming-pipeline.md
docs/spec/: 00-overview.md  06-data-formats.md  09-parsing.md  test-bitstreams.md
docs/spec/07-syntax/: 07-00-index.md  07-03-nal-unit.md  07-04-parameter-sets.md  07-05-slice-header.md  07-06-slice-data.md  07-07-sei.md  07-08-slice-segment-data.md
docs/spec/08-decoding/: 08-00-index.md  08-03-reference-pictures.md  08-04-inter-prediction.md  08-05-intra-prediction.md  08-06-transform-quant.md  08-07-deblocking.md  08-08-sao.md
docs/spec/tables/: cabac-arithmetic.md  cabac-init-values.md  intra-tables.md  merge-table.md  scaling-list-defaults.md  transform-matrices.md
site/: CNAME  index.html  robots.txt  sitemap.xml
site/docs/: dashjs-plugin.html
src/: main.cpp
src/bitstream/: bitstream_reader.cpp  bitstream_reader.h  nal_parser.cpp  nal_unit.h
src/common/: debug.h  picture.cpp  picture.h  thread_pool.cpp  thread_pool.h  types.h
src/decoder/: decoder.cpp  decoder.h
src/decoding/: cabac.cpp  cabac.h  cabac_tables.h  coding_tree.cpp  coding_tree.h  decoder.cpp  decoder.h  dpb.cpp  dpb.h  inter_prediction.cpp  inter_prediction.h  interpolation.cpp  interpolation.h  intra_prediction.cpp  intra_prediction.h  residual_coding.cpp  residual_coding.h  syntax_elements.cpp  syntax_elements.h  transform.cpp  transform.h
src/filters/: deblocking.cpp  deblocking.h  sao.cpp  sao.h
src/syntax/: parameter_sets.cpp  parameter_sets.h  pps.cpp  pps.h  profile_tier_level.cpp  profile_tier_level.h  slice_header.cpp  slice_header.h  sps.cpp  sps.h  vps.cpp  vps.h
src/wasm/: hevc_api.cpp  hevc_api.h  hevc_decoder.js  worker.js
tests/conformance/fixtures/: README.md  b_qcif_10f.265  bbb1080_50f.265  full_qcif_10f.265  full_qcif_10f_10bit.265  i_64x64_10bit.265  i_64x64_deblock.265  i_64x64_full.265  i_64x64_qp22.265  i_64x64_sao.265  i_qcif_176x144.265  p_qcif_10f.265  (+3 more)
tests/e2e/: bugfix-validation.spec.ts  dash.spec.ts  helpers.ts  hls.spec.ts  seek-long-stream.spec.ts  videojs.spec.ts
tests/e2e-npm-install/: playwright-check.mjs  run.sh
tests/unit/: test_bitstream_reader.cpp  test_cabac.cpp  test_incremental.cpp  test_nal_parser.cpp  test_parameter_sets.cpp  test_picture.cpp
tools/: bench_wasm.cjs  bench_wasm.mjs  benchmark.sh  extract_cabac_reference.py  fetch_conformance.sh  gen_dash_streams.sh  gen_toy_bitstreams.sh  oracle_compare.py  oracle_test.sh  run-e2e-bs-local.sh
(+48 files in other folders)
